build/testing/noncore-mqtt/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: noncore-mqtt-service
  namespace: testing
spec:
  selector:
    app: noncore-mqtt
  type: ClusterIP
  ports:
  - name: node
    port: 80
    targetPort: 8080
